# Monero

attacks/AttacksMonero/: AttacksMonero.sln  Report20190308-1600.vspx
attacks/AttacksMonero/AttacksMonero/: AttacksMonero.vcxproj  AttacksMonero.vcxproj.filters  cascade.cpp
attacks/AttacksMonero/AttacksMonero/Debug/: vc141.idb
attacks/AttacksMonero/Debug/: AttacksMonero.ilk
scrap/: get_data.py
scripts/: CMakeLists.txt  cascade.cpp  cycle.cpp  graph.cpp  keys.cpp  monero_data.py  reduce.cpp  test_boost.cpp  test_monero_data.csv
scripts/Cross/: backtrack.py  cleanse.py  cross_analysis.py  get_age.py  get_age_with_help.py  post_process.py  sortbyref_tx  sortbytx  sortcsv  truncate.py
scripts/simulations/: active_attack.py  blockchain.py  closed_sets.py  closed_sets_detect.py  passive_attack.py  proba_tables.py
scripts/simulations/data/: min_between_transactions.csv  ringsize.csv  transactions_per_block.csv
scripts/simulations/figures/: figure_chainsize.tex  figure_ringsize.tex
scripts/simulations/figures/RFigures/: figure_chainsize.R  figure_ringsize.R  packages.R
scripts/simulations/inputs/: blockchain_assumptions.npz  inter_time.npy  ringsize.npy  transaction_per_block.npy
scripts/simulations/results/: Untitled.ipynb  changes_shape_passive_attack_2.csv  changes_shape_passive_attack_ring.csv  changes_shape_passive_attack_size.csv  passive_attacks_2.npz  passive_attacks_3.npz  passive_attacks_chainsize.npz  passive_attacks_normal.npz  passive_attacks_ring.npz  passive_attacks_scale.npz
(+7 files in other folders)
